<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.indusapp.gpstracking.GpsTrackerActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtUserName"
            android:hint="@string/user_name" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:id="@+id/txtWebsite"
            android:layout_below="@+id/txtUserName"
            android:layout_marginTop="50dp"
            android:hint="@string/upload_website" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_frequency"
            android:id="@+id/lblInterval"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtWebsite"
            />
        <RadioGroup
            android:id="@+id/intervalRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblInterval"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp">
            <RadioButton
                android:id="@+id/i1"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_minute" >
            </RadioButton>
            <RadioButton
                android:id="@+id/i5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_minutes" >
            </RadioButton>
            <RadioButton
                android:id="@+id/i15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteen_minutes" >
            </RadioButton>
        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_tracking_button"
        android:text="@string/tracking_is_off"
        android:id="@+id/trackingButton"
        android:layout_weight="1"
        android:height="50dip" />
    </LinearLayout>



</RelativeLayout>
